--- a/Board-v2/src/main/resources/application.yml
+++ b/Board-v2/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  messages:
+    basename: messages,errors
   jpa:
     hibernate:
       ddl-auto: create
@@ -14,3 +16,9 @@ spring:
 
 logging.level:
   org.hibernate.SQL: debug
+
+server:
+  servlet:
+    session:
+      tracking-modes: cookie
+      timeout: 60
